# mem0-mcp-selfhosted

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: battle_results.json  battle_results_v2.json
hooks/: install.sh  mem0-context-hook.sh  mem0-posttool-hook.sh  mem0-stop-hook.sh  mem0_context_hook.py  mem0_init.py  mem0_posttool_hook.py  mem0_stop_hook.py
src/mem0_mcp_selfhosted/: auth.py  config.py  graph_tools.py  helpers.py  llm_anthropic.py  llm_ollama.py  llm_openai_compat.py  milvus_hybrid.py  server.py
tests/contract/: test_mem0ai_internals.py
tests/integration/: conftest.py  test_bulk_operations.py  test_graph.py  test_memory_lifecycle.py
tests/unit/: test_auth.py  test_config.py  test_graph_tools.py  test_helpers.py  test_llm_anthropic.py  test_llm_ollama.py  test_server.py
